=================
Changes for Crate
=================

Unreleased
==========

 - Updated crate-admin to 0.14.1 which includes following changes:

    - fix: number of underreplicated shards were fetched and displayed incorrectly

 - Fixed issue that could lead to a NullPointerException
   caused by reporting row results to handler node before merge phase on handler
   was started

 - Added a limitation notice that `COPY TO` doesn't work with system tables and
   attempting to do so will result in a more meaningful error.

 - Fixed bulk delete for partitioned tables where partition column was part
   of the where clause

 - Fixed a rare race condition that could cause some queries with offset + limit higher
   than 1_000_000 to return too few rows

 - Fixed an issue that could cause concurrent queries on information_schema or
   sys tables to return inconsistent results

 - Fix: IS NULL predicate in query could return records that have already been
   marked for deletion

 - Fixed a possible race condition which leads to the execution of a
   non-distributed group by instead of a distributed one.

 - Fixed hash collide in fetch requests to avoid collision of node identifiers

 - Fixed an issue that could lead to unclosed contexts when issuing bulk requests

 - Fixed an issue that could lead to deadlock and therefore freezing of a node
   when there where too many queries asking for routing information in parallel.

 - Fix: Querying from information_schema while a table is created could
   cause an error

 - only log amazon s3 client stuff on level ``WARN``

 - log failing uri on COPY FROM

 - Fixed a NPE that was thrown if a SELECT statement contained `_score` in the
   result columns and an ORDER BY clause.

 - Fix: selecting error from sys.jobs_log caused a NPE in some cases

 - Fix: If a query would fail because a shard starts to relocate during
   query time, the query is retried now

 - Updated crate-admin to 0.13.4 which includes following changes:
