@@ -27,7 +27,6 @@ import io.crate.exceptions.InvalidColumnNameException;
 import io.crate.metadata.ColumnIdent;
 import io.crate.metadata.ReferenceIdent;
 import io.crate.metadata.ReferenceInfo;
-import io.crate.metadata.table.TableInfo;
 import io.crate.planner.symbol.Reference;
 import io.crate.sql.tree.DefaultTraversalVisitor;
 import io.crate.sql.tree.Insert;
@@ -74,7 +73,8 @@ public abstract class AbstractInsertAnalyzer extends DefaultTraversalVisitor<Abs
             }
         }
 
-        if (!context.tableInfo().hasAutoGeneratedPrimaryKey() && context.primaryKeyColumnIndices().size() == 0) {
+        if (context.primaryKeyColumnIndices().size() == 0 &&
+                !(context.tableInfo().primaryKey().isEmpty() || context.tableInfo().hasAutoGeneratedPrimaryKey())) {
             throw new IllegalArgumentException("Primary key is required but is missing from the insert statement");
         }
         ColumnIdent clusteredBy = context.tableInfo().clusteredBy();
